Use JDK 17